2002-07-22  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* glshape.h: dummy GL_manager class
	* exult.cc, gamewin.cc, mouse.h: include glshape.h
	* configure.in, Makefile.am: --enable-opengl

2002-07-22  Tristan Tarrant  <nadir@users.sourceforge.net>
	* mouse.h: #ifdef HAVE_OPENGL was missing around call to GL stuff

2002-07-21  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/conversation.cc (Conversation): Still a bit rough, but
	Conversation::paint() no repaints the whole conversation in its
	current state.

	* gumps/Newfile_gump.cc (Newfile_gump): Fixed crash I caused.
	* exult.cc, etc:  Get_click takes a Paintable parameter.

	* drag.cc,gamerend.cc:  Dragging_info::paint() added.

2002-07-20  Jeff Freedman  <jeff@amy.nerble.net>

	* mouse.cc,font.cc,etc.:  More things kind-of work in OpenGL
	(though mouse doesn't clean up after itself and conversation text
	disappears, so there's LOTs to fix.)

2002-07-18  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.cc: SIGCHLD handler to clean up forked playmidi processes
	* configure.in: check for sys/wait.h, signal.h (see above)
	* lots: modal-gump-keyevent-handling related cleanup

2002-07-16  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/flags.h,actors.h,etc:  Moved 'dont_move' and
	'no_spell_casting' flags to the spots in Obj_flags where they're
	referred to in Usecode.
	*imagewin/ibuf.{cc,h}:  rgba() converts to 32-bit format (untested).

2002-07-16  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* orangedress.shp, bluedress.shp: new paperdoll art by sbx

2002-07-15  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* data/bg/greentop.shp: new paperdoll art. Thanks sbx!
	* usecode/ucxt/Makefile.am: fixed --disable-tools
	* configure.in: install gnome things to $(datadir)
	(instead of $(GNOMEDATADIR)). This allows non-root installs.
	* data/Makefile.am: don't install estudio data when not building that
